fix(kotlin,ci): JDK-portable Ed25519 on-curve check, byte-range guard, enforce coverage gate
Three Greptile 4/5 concerns on PR #105:

1. Ed25519 OnCurveCheck no longer reflects into BouncyCastle's
   private validatePublicKeyPartial (which breaks under JDK 17+
   strong encapsulation; ExceptionInInitializerError on the next
   --illegal-access=deny bump). Rewritten inline against RFC 8032
   §5.1.3 field arithmetic: decode y little-endian (high bit holds
   x sign), reject y >= p, compute u = y^2 - 1 and v = d * y^2 + 1,
   recover x via candidate = u * v^3 * (u * v^7)^((p-5)/8) and
   verify v * x^2 = +-u (mod p), multiplying by sqrt(-1) on the
   negative-u branch. All BigInteger, no JNI, no reflection.

   Note: the JDK 15+ EdECPublicKeySpec path Greptile suggested as
   alternative does not actually enforce on-curve at spec creation
   (KeyFactory.generatePublic accepts arbitrary 32 byte y values
   without raising InvalidKeySpecException; confirmed by spinning
   up a debug test that returned 200/200 random samples as
   on-curve). The inline RFC 8032 implementation matches the
   Rust spine exactly: PdaTest's golden ATA
   2xyhP3ZCpBqnjPe1oLzQCXqb5kMrJHY6sVkt7x4mBUz5 still resolves at
   bump 253 (bumps 255 and 254 correctly classified as on-curve and
   rejected). Random-sample sanity check: 86/200 on-curve, ~43%,
   matching the expected Ed25519 valid-point density.

2. tests/interop/kotlin-client Main.kt parseSecretKey now raises
   IllegalArgumentException when a JSON byte falls outside 0..255.
   Without the guard, 256 silently wrapped through Int.toByte()
   to 0 (and -1 wrapped to 255), producing a different signer
   without any error. Lifted parseSecretKey to internal so the new
   ParseSecretKeyTest can cover it; the test asserts the parser
   rejects 256, rejects -1, accepts 32 and 64 byte arrays, and
   surfaces clear errors for wrong size, non-array, and
   non-integer elements. The interop adapter's build.gradle.kts
   now declares testImplementa